# ai-business-coach

./: .gitignore  2025-20-10_churn_pipeline.ipynb  2025_22_10_churn_pipeline_(2) (8).ipynb  GLASS-BRW.ipynb  README.md  churn_pipeline_2025-19-10.ipynb  churn_pipeline_distributions-2.0.ipynb  churn_pipeline_distributions-3.0.ipynb  churn_pipeline_distributions.ipynb  churn_pipeline_enhanced.ipynb  glass-brw_model.ipynb  glass_brw_model.ipynb  glass_cascade.ipynb  requirements.txt  slm-churn-model.ipynb
churn_pipeline/modules/: cascade_model.py  experiment_runner.py  feature_engineer.py  leakage_monitor.py  preprocessor.py
churn_pipeline/notebooks/: churn_pipeline.ipynb
data/selected-features/: feature_analysis.json  feature_info.json  selected-features.csv  selected_features_dataset.csv
documentation/: dataset_audit_and_research_status.md  glass_brw_status.md  glass_brw_status_and_experiments.md  setup_and_hardware.md  stage2_glass_brw_functional_overview.md
prototype/churn_pipeline/: cascade_model_cpp.py
prototype/cpp_models/shared_cpp/churn_pipeline_cpp/: CMakeLists.txt
prototype/cpp_models/shared_cpp/churn_pipeline_cpp/bindings/: python_bindings.cpp
prototype/cpp_models/shared_cpp/churn_pipeline_cpp/include/: churn_cascade.h  recurrent_network.h
prototype/cpp_models/shared_cpp/churn_pipeline_cpp/src/: churn_cascade.cpp  recurrent_network.cpp
prototype/glass_pipeline/: exploratory_feature_research.ipynb  glass_cascade .ipynb
prototype/modules/: cascade_model.py  data_loader.py  experiment_runner.py  feature_engineer.py  (+2 more)
research_logs/: 2025-10-04.md
(+192 files in other folders)
